--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="explainer">
             <h1>Explainer Video
             </h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div id="information">
             <h1>Her skriver vi vel noget info</h1>
@@ -32,7 +32,7 @@
         <div id="kampagne_video">
             <h1>Kampagne video tror jeg
             </h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div id="slut_tekst1">
             <h1>Her skriver vi noget mere</h1>
