Forsøg med Yndlings Logo + dropdown-menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <section id="grid_container">
         <nav id="nav_top">
-            <h1>DropDown-menu eller Knapper</h1>
+            <h1>Alm. Brand præsenterer</h1>
+            <img src="img/Yndlings_Logo-2.svg">
         </nav>
 
 
