rettelser i dropdown i index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+       <div class="dropdown">
+    <button class="dropbtn">MENU</button>
+        <div class="dropdown-content">
+
+            <a href="forside.html">FORSIDE</a>
+            <a href="galleri.html">GALLERI</a>
+            <a href="kontakt.html">KONTAKT</a>
+
+
+    </div>
+    </div>
     <section id="grid_container">
         <nav id="nav_top">
             <h1>Alm. Brand præsenterer</h1>
