--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <button class="dropbtn">MENU</button>
         <div class="dropdown-content">
 
-            <a href="forside.html">FORSIDE</a>
-            <a href="galleri.html">GALLERI</a>
-            <a href="kontakt.html">KONTAKT</a>
+            <a href="">YndlingsBasis</a>
+            <a href="">YndlingsTing</a>
+            <a href="">YndlingsBlog</a>
+            <a href="">Support</a>
+            <a href="">Log Ind</a>
+
+
 
 
     </div>
@@ -29,15 +33,23 @@
 
 
         <div id="explainer">
-            <h1>Explainer Video
-            </h1>
+            <nav id="cards">
+                <img src="img/spillekort.png">
+
+
+            <h1>Explainer Video</h1>
+
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+        </nav>
+    </div>
+
         <div id="information">
             <h1>Her skriver vi vel noget info</h1>
+
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tri</p>
         </div>
+
 
         <div id="billede_first">
         </div>
