--- a/index.html
+++ b/index.html
@@ -9,44 +9,48 @@
 </head>
 
 <body>
-       <div class="dropdown">
-    <button class="dropbtn">MENU</button>
-        <div class="dropdown-content">
 
-            <a href="">YndlingsBasis</a>
-            <a href="">YndlingsTing</a>
-            <a href="">YndlingsBlog</a>
-            <a href="">Support</a>
-            <a href="">Log Ind</a>
-
-
-
-
-    </div>
-    </div>
     <section id="grid_container">
         <nav id="nav_top">
+            <div class="dropdown">
+                <button class="dropbtn"><b>MENU</b></button>
+                <div class="dropdown-content">
+
+                    <a href="">YndlingsBasis</a>
+                    <a href="">YndlingsTing</a>
+                    <a href="">YndlingsBlog</a>
+                    <a href="">Yndlings.dk</a>
+                    <a href="">Log Ind</a>
+                </div>
+            </div>
+
+
+
+
             <h1>Alm. Brand præsenterer</h1>
-            <img src="img/Yndlings_Logo-2.svg">
+            <img src="img/Yndlings_Logo-2.svg" class="logo">
+            <br>
+            <img src="img/haand.png" class="haand">
+
+
         </nav>
 
 
-
         <div id="explainer">
-<!--
+            <!--
             <nav id="cards">
                 <img src="img/spillekort.png">
             </nav>
 -->
 
-            <h1>Explainer Video</h1>
+            <h1>"Explainer Video"</h1>
 
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-    </div>
+        </div>
 
         <div id="information">
-            <h1>Her skriver vi vel noget info</h1>
+            <h1>Med <i>Yndlings</i> har du altid et es i ærmet</h1>
 
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tri</p>
@@ -56,7 +60,7 @@
         <div id="billede_first">
         </div>
         <div id="kampagne_video">
-            <h1>Kampagne video tror jeg
+            <h1>Gambler du med din fremtid?
             </h1>
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
@@ -71,16 +75,23 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-        <footer><button id="buy">KØB</button> </footer>
     </section>
+
+    <div id="haender">
+        <img src="img/haender-01.svg">
+        <img src="img/haender-01.svg">
+        <img src="img/haender-01.svg">
+
+    </div>
+
+
+
+
+    <footer>
+
+        <img id="pic_1" src="img/footer_yndlings.png">
+
+    </footer>
 
 
 
