ALT ER AENDRET. Her er den endelige version.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="da">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yndlings</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
 
-    <section id="grid_container">
-        <nav id="nav_top">
-            <div class="dropdown">
+    <div class="grid">
+        <div class="title">
+        <div class="dropdown">
                 <button class="dropbtn"><b>MENU</b></button>
                 <div class="dropdown-content">
 
@@ -23,86 +24,173 @@
                     <a href="">Log Ind</a>
                 </div>
             </div>
+        </div>
 
 
+        <div class="header">
+        <h1 class="overskrift">Alm. Brand præsenterer</h1>
+        <img src="img/haand.png" class="haand">
+        <img src="img/Yndlings_Logo-2.svg" class="logo">
+        <img src="img/haand.png" class="konge">
 
-
-            <h1>Alm. Brand præsenterer</h1>
-            <img src="img/Yndlings_Logo-2.svg" class="logo">
-            <br>
-            <img src="img/haand.png" class="haand">
-
-
-        </nav>
-
-
-        <div id="explainer">
-            <!--
-            <nav id="cards">
-                <img src="img/spillekort.png">
-            </nav>
--->
-
-            <h1>"Explainer Video"</h1>
-
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         </div>
 
-        <div id="information">
+
+        <div class="sidebar">
+        <h1>For kun 19,- om måneden...</h1>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vVwsQhUsVX8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+
+        </div>
+
+
+
+        <div class="content">
             <h1>Med <i>Yndlings</i> har du altid et es i ærmet</h1>
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tri</p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum.</p></div>
+
+        <div class="content_2">
+        <h1>Gambler du med din fremtid?</h1>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/UxsUkXu_p6s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div id="infographic"></div>
+
+
+        <div class="sidebar_2">
+        <h1>Her kan du finde os i løbet af sommeren</h1>
+            <p>SPOT Festival<br>Distortion<br>NorthSide Festival<br>Roskilde Festival<br>Musik i Lejet<br>Trailerpark Festival</p>
+
+
         </div>
 
 
-        <div id="billede_first">
-        </div>
-        <div id="kampagne_video">
-            <h1>Gambler du med din fremtid?
-            </h1>
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/T3rXdeOvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <div id="slut_tekst1">
-            <h1>Her skriver vi noget mere</h1>
-            <p>In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tri</p>
+
         </div>
 
-        <div id="slut_tekst2">
-            <h1>Her skriver vi noget mere</h1>
-            <p>In id tristique lectus. Phasellus vehicula mattis erat, non finibus tortor suscipit id. Pellentesque eu rhoncus turpis, at gravida elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo felis nec posuere interdum. In id tri</p>
+        <div class="cards">
+            <img src="img/hjerterkn%C3%A6gt.png">
+            <img src="img/hjerterdame.png">
+            <img src="img/hjerterkonge.png">
+            <img src="img/spardronning.png">
+            <img src="img/sparkn%C3%A6gt.png">
+            <img src="img/sparkonge.png">
+            <img src="img/kl%C3%B8rdronning.png">
+            <img src="img/kl%C3%B8rkn%C3%A6gt.png">
+            <img src="img/kl%C3%B8rkonge.png">
+            <img src="img/ruderkonge.png">
         </div>
 
 
-    </section>
 
-    <div id="haender">
-        <img src="img/haender-01.svg">
-        <img src="img/haender-01.svg">
-        <img src="img/haender-01.svg">
-
-    </div>
+        <div class="footer">
+        <img id="pic_1" src="img/footer_yndlings_smal.png">
 
 
+        </div>
 
 
-    <footer>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            runProgram();
+        });
 
-        <img id="pic_1" src="img/footer_yndlings.png">
+        async function runProgram() {
 
-    </footer>
+            let mySvg = await fetch("infograph.svg");
 
+            let svg = await mySvg.text();
 
+            document.querySelector("#infographic").innerHTML = svg;
 
+            let aceInSleeve = document.querySelector("#infographic #aceinsleeve");
+            let yndlingsTing = document.querySelector("#infographic #yndlingsting");
+            let yndlingsBasis = document.querySelector("#infographic #yndlingsbasis");
+            let tingTekst = document.querySelector("#infographic #tingtekst");
+            let basisTekst = document.querySelector("#infographic #basistekst");
+            let startTekst = document.querySelector("#infographic #starttekst");
+            let mereKortTop = document.querySelector("#infographic #merekorttop");
+            let tingKortTop = document.querySelector("#infographic #tingkorttop");
+            let basisKortTop = document.querySelector("#infographic #basiskorttop");
+            let linkKortTop = document.querySelector("#infographic #linkkorttop");
+            let yndlingsDk = document.querySelector("#infographic #yndlingsdk");
 
+            yndlingsTing.style.visibility = "hidden";
+            yndlingsBasis.style.visibility = "hidden";
+            tingTekst.style.visibility = "hidden";
+            basisTekst.style.visibility = "hidden";
+            tingKortTop.style.visibility = "hidden";
+            basisKortTop.style.visibility = "hidden";
+            linkKortTop.style.visibility = "hidden";
+            yndlingsDk.style.visibility = "hidden";
 
+            document.querySelector("#merekorttop").addEventListener("click", clickedMereTop);
 
+            document.querySelector("#basiskorttop").addEventListener("click", clickedBasisTop);
+            document.querySelector("#linkkorttop").addEventListener("click", clickedLinkTop);
+            document.querySelector("#linkkortlink").addEventListener("click", clickedLinkKort);
+            document.querySelector("#yndlingsdk").addEventListener("click", clickedYndlingsDk);
 
+            function clickedMereTop() {
+                document.querySelector("#merekorttop").removeEventListener("click", clickedMereTop);
+                document.querySelector("#tingkorttop").addEventListener("click", clickedTingTop);
+                mereKortTop.style.visibility = "hidden";
+                startTekst.style.visibility = "hidden";
+                aceInSleeve.style.visibility = "hidden";
+                tingKortTop.style.visibility = "visible";
+                tingTekst.style.visibility = "visible";
+                yndlingsTing.style.visibility = "visible";
+            }
 
+            function clickedTingTop() {
+                document.querySelector("#tingkorttop").removeEventListener("click", clickedTingTop);
+                document.querySelector("#basiskorttop").addEventListener("click", clickedBasisTop);
+                tingKortTop.style.visibility = "hidden";
+                yndlingsTing.style.visibility = "hidden";
+                tingTekst.style.visibility = "hidden";
+                basisKortTop.style.visibility = "visible";
+                yndlingsBasis.style.visibility = "visible";
+                basisTekst.style.visibility = "visible";
+            }
 
+            function clickedBasisTop() {
+                document.querySelector("#basiskorttop").removeEventListener("click", clickedBasisTop);
+                document.querySelector("#linkkorttop").addEventListener("click", clickedLinkTop);
+                document.querySelector("#linkkortlink").addEventListener("click", clickedLinkKort);
+                document.querySelector("#yndlingsdk").addEventListener("click", clickedYndlingsDk);
+                basisKortTop.style.visibility = "hidden";
+                yndlingsBasis.style.visibility = "hidden";
+                basisTekst.style.visibility = "hidden";
+                linkKortTop.style.visibility = "visible";
+                yndlingsDk.style.visibility = "visible";
+                aceInSleeve.style.visibility = "visible";
+            }
 
-    <script src="script.js"></script>
+            function clickedLinkTop() {
+                document.querySelector("#linkkorttop").removeEventListener("click", clickedLinkTop);
+                document.querySelector("#merekorttop").addEventListener("click", clickedMereTop);
+                linkKortTop.style.visibility = "hidden";
+                yndlingsDk.style.visibility = "hidden";
+                mereKortTop.style.visibility = "visible";
+                startTekst.style.visibility = "visible";
+                aceInSleeve.style.visibility = "visible";
+            }
+
+            function clickedLinkKort() {
+                console.log("abekat");
+                window.location.href = "https://yndlings.dk/";
+            }
+
+            function clickedYndlingsDk() {
+                window.location.href = "https://yndlings.dk/";
+            }
+        }
+    </script>
+
 </body>
-
 </html>
